<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Projects" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/icon_caption"
        android:src="@drawable/projects" />

    <Button
        android:id="@+id/proj_web_design"
        android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:background="#DF0101"
        android:text="@string/proj_web_des_bt"
        android:textSize="22sp"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/proj_app_dev"
        android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:background="#DF0101"
        android:text="@string/proj_app_dev_bt"
        android:textSize="22sp"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/proj_art"
        android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:background="#DF0101"
        android:text="@string/proj_digital_art_bt"
        android:textSize="22sp"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/proj_mods"
        android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:background="#DF0101"
        android:text="@string/proj_mod_dev_bt"
        android:textSize="22sp"
        android:textColor="#FFFFFF" />



</LinearLayout>