<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="top"
    android:orientation="vertical">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#000000"
	    android:gravity="center_horizontal"
	    android:orientation="vertical"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    tools:context=".About" >
	
	    <TextView
	        android:id="@+id/about_hd"
	        android:layout_width="260dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="23dp"
	        android:layout_marginBottom="20dp"
	        android:text="@string/about_header"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="#DF0101"
	        android:textSize="20sp" />
	
	    <TextView
	        android:id="@+id/about_bd1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:text="@string/about_body_1"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp" />
	    
	    <TextView
	        android:id="@+id/about_bd2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:text="@string/about_body_2"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp" />
	    
	    <TextView
	        android:id="@+id/about_bd3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:text="@string/about_body_3"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp" />
	    
	
	</LinearLayout>
</ScrollView>