<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="top"
    android:orientation="vertical">
	    <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="wrap_content" 
	        android:orientation="vertical"
	        android:background="#000000"
   			android:gravity="center_horizontal">

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/icon_caption"
	            android:src="@drawable/skyrimlogo" />

	        <ImageView
	            android:id="@+id/imageView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/icon_caption"
	            android:src="@drawable/bookmaster" />
		
		    <ImageView
		        android:id="@+id/header"
		        android:layout_width="210dp"
		        android:layout_height="260dp"
		        android:contentDescription="@string/icon_caption"
		        android:layout_marginBottom="20dp"
		        android:src="@drawable/bookcover" />
		
		    <TextView
		        android:id="@+id/dm_description"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="#FFFFFF"
		       	android:textSize="15sp" 
		       	android:layout_marginBottom="20dp"
		       	android:layout_marginLeft="10dp"
		       	android:layout_marginRight="10dp"
			    android:text="@string/bm_desc" />
		    <Button
				android:id="@+id/bm_bt"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:layout_marginBottom="10dp"
				android:background="#610B0B"
				android:text="@string/bookmaster_bt"
				android:textSize="22sp"
				android:textColor="#FFFFFF"  />

	</LinearLayout>
</ScrollView>
